--- a/src/AppBundle/Resources/views/homepage/index.html.twig
+++ b/src/AppBundle/Resources/views/homepage/index.html.twig
@@ -19,6 +19,9 @@
             {{ form_widget(form) }}
             {{ form_end(form) }}
 
+            <br>
+            {{ url('homepage') }}{{ new_url }}
+
         </div>
     </div>
 {% endblock %}
