redirect from short url, amount of visits

--- a/src/AppBundle/Resources/views/homepage/index.html.twig
+++ b/src/AppBundle/Resources/views/homepage/index.html.twig
@@ -21,6 +21,8 @@
 
             <br>
             {{ url('homepage') }}{{ new_url }}
+            <br>
+            Amount of visits: {{ amount }}
 
         </div>
     </div>
