--- a/src/AppBundle/Resources/views/show/index.html.twig
+++ b/src/AppBundle/Resources/views/show/index.html.twig
@@ -6,12 +6,10 @@
 
             <div id="status">
                 <p>
-                    link not found. <br><br>
+                    link not found.<br>
                     Go back to the <a href="{{ url('homepage') }}">main page</a>
                 </p>
             </div>
-
-
 
         </div>
     </div>
