--- a/src/AppBundle/Resources/views/api/index.html.twig
+++ b/src/AppBundle/Resources/views/api/index.html.twig
@@ -1,43 +1,29 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <div id="wrapper">
-        <div id="container">
-            <h1>Welcome to link #{{ id }}</h1>
-
-            <br>
-            Origin url: {{ origin_url }}
-            <br>
-            Short url: {{ url('homepage') }}{{ short_url }}
-            <br>
-            Amount of visits: {{ amount }}
-
-
-        </div>
-    </div>
+{% block stylesheets %}
+    {% stylesheets
+    '@AppBundle/Resources/public/styles/bootstrap.min.css'
+    '@AppBundle/Resources/public/styles/style.css'
+    filter='cssrewrite' %}
+    <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
 {% endblock %}
 
-{% block stylesheets %}
-    <style>
-        body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
-        h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
-        h1 { font-size: 36px; }
-        h2 { font-size: 21px; margin-bottom: 1em; }
-        p { margin: 0 0 1em 0; }
-        a { color: #0000F0; }
-        a:hover { text-decoration: none; }
-        code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-        #wrapper { background: #FFF; margin: 1em auto; max-width: 800px; width: 95%; }
-        #container { padding: 2em; }
-        #welcome h1 span { display: block; font-size: 75%; }
-
-
-        @media (min-width: 768px) {
-            #wrapper { width: 80%; margin: 2em auto; }
-            #status a, #next a { display: block; }
-
-            @-webkit-keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-            @keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        }
-    </style>
+{% block body %}
+        <div class="container">
+            <h1>Welcome to link #{{ id }}</h1>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row">
+                        <span class="col-lg-2 text-right">Origin url:</span> <span class="col-lg-10">{{ origin_url }}</span>
+                    </div>
+                    <div class="row">
+                        <span class="col-lg-2 text-right">Short url:</span> <span class="col-lg-10">{{ url('homepage') }}{{ short_url }}</span>
+                    </div>
+                    <div class="row">
+                        <span class="col-lg-2 text-right">Amount of visits:</span> <span class="col-lg-10">{{ amount }}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
 {% endblock %}
