--- a/src/AppBundle/Resources/views/homepage/index.html.twig
+++ b/src/AppBundle/Resources/views/homepage/index.html.twig
@@ -1,46 +1,42 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {% stylesheets '@AppBundle/Resources/public/styles/bootstrap.min.css' filter='cssrewrite' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+{% endblock %}
+
 {% block body %}
-    <div id="wrapper">
-        <div id="container">
+        <div class="container">
+
             <h1>Welcome to shortener</h1>
 
             {{ form_start(form) }}
-            {{ form_widget(form) }}
+
+                {% if form.vars.errors|length or form.originUrl.vars.errors|length %}
+                    <div class="alert alert-danger">
+                        {{ form_errors(form) }}
+                        {{ form_errors(form.originUrl) }}
+                    </div>
+                {% endif %}
+
+                <div class="form-group">
+                    {{ form_label(form.originUrl, 'Paste link') }}
+                    {{ form_widget(form.originUrl, {'attr': {'class': 'form-control'}}) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.shortUrl, 'Desired short url') }}
+                    {{ form_widget(form.shortUrl, {'attr': {'class': 'form-control'}})  }}
+                </div>
+                {{ form_widget(form.save, {'attr': {'class': 'btn btn-lg btn-primary'}, 'label': 'Generate'}) }}
             {{ form_end(form) }}
 
             {% if new_url is defined %}
-                <br>
-                {{ url('homepage') }}{{ new_url }}
-                <br>
-                Amount of visits: {{ amount }}
+                <h3>Copy your short link :)</h3>
+                <div class="well well-sm">
+                    {{ url('homepage') }}{{ new_url }}
+                </div>
             {% endif %}
 
         </div>
-    </div>
-{% endblock %}
-
-{% block stylesheets %}
-    <style>
-        body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
-        h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
-        h1 { font-size: 36px; }
-        h2 { font-size: 21px; margin-bottom: 1em; }
-        p { margin: 0 0 1em 0; }
-        a { color: #0000F0; }
-        a:hover { text-decoration: none; }
-        code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-        #wrapper { background: #FFF; margin: 1em auto; max-width: 800px; width: 95%; }
-        #container { padding: 2em; }
-        #welcome h1 span { display: block; font-size: 75%; }
-
-
-        @media (min-width: 768px) {
-            #wrapper { width: 80%; margin: 2em auto; }
-            #status a, #next a { display: block; }
-
-            @-webkit-keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-            @keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
-        }
-    </style>
 {% endblock %}
